Fixed bug with overflow on the home page
Closes #10

--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -9,8 +9,6 @@
 
     p {
         margin: 0;
-        min-width: 15em;
-        max-width: 40em;
     }
 
     a {
@@ -18,6 +16,16 @@
 
         align-self: flex-end;
         text-align: right;
+    }
+}
+
+@media only screen and (max-width: $mediumMinScreenWidth) {
+    .company {
+        flex-direction: column;
+
+        a {
+            margin-top: 1em;
+        }
     }
 }
 
